manifests/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: myapp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-allpods-to-dns
  namespace: myapp
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-service
  namespace: myapp
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: myapp-app
  ingress:
    - from:
        - podSelector: {} # Allows traffic from any pod in the namespace
        - namespaceSelector: {} # Allows traffic from any namespace
      ports:
        - port: 80
          protocol: TCP
        - port: 8081
          protocol: TCP
  egress:
    - to:
        - podSelector: {} # Allows traffic from any pod in the namespace
        - namespaceSelector: {} # Allows traffic from any namespace
      ports:
        - port: 80
          protocol: TCP
        - port: 8081
          protocol: TCP
